# vg_sales_2024

./: .gitignore  README.md  presentation.py  pyproject.toml  script.txt  test.ipynb  test.py  vg-sales.ipynb
